--- a/Exercises_List_1/Q4.ipynb
+++ b/Exercises_List_1/Q4.ipynb
@@ -319,6 +319,59 @@
     "$$\\varphi'(v) = \\frac{a}{2} \\cdot (1 - \\varphi^2(v))$$\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0627dc72",
+   "metadata": {},
+   "source": [
+    "### b) As funções de saída das redes neurais dependem do modelo probabilístico que se busca gerar com a rede. Faça uma análise sobre a escolhas destas funções considerando os seguintes problemas:\n",
+    "\n",
+    "#### ($i$) - Classificação de padrões com duas classes\n",
+    "Para problemas de classificação de padrões com duas classes, a função de ativação mais comumente utilizada na camada de saída é a função **sigmoide**. Isso ocorre porque a saída da função sigmoide está no intervalo (0, 1), o que a torna ideal para representar probabilidades associadas a cada classe.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "1. **Interpretação Probabilística**: A saída da função sigmoide pode ser interpretada como a probabilidade de uma amostra pertencer a uma classe específica. Por exemplo, uma saída de 0.8 pode ser interpretada como 80% de chance de a amostra pertencer à classe positiva.\n",
+    "2. **Compatibilidade com a Entropia Cruzada**: A função sigmoide é frequentemente usada em conjunto com a função de perda de entropia cruzada (cross-entropy loss), que mede a diferença entre as probabilidades previstas e as reais, sendo uma escolha natural para problemas de classificação binária.\n",
+    "3. **Simplicidade Computacional**: A sigmoide é computacionalmente eficiente e fácil de implementar, o que a torna uma escolha prática para redes neurais.\n",
+    "\n",
+    "##### Limitações:\n",
+    "- **Vanishing Gradient**: Em redes profundas, a sigmoide pode sofrer com o problema de gradiente desaparecendo, dificultando o treinamento.\n",
+    "- **Não Centragem em Zero**: A saída da sigmoide não é centrada em zero, o que pode levar a uma convergência mais lenta durante o treinamento.\n",
+    "\n",
+    "Apesar dessas limitações, a sigmoide continua sendo uma escolha padrão para problemas de classificação binária, especialmente em redes rasas ou em situações onde a interpretabilidade da saída como probabilidade é crucial.\n",
+    "\n",
+    "#### ($ii$) - Classificação de padrões com múltiplas classes\n",
+    "Para problemas de classificação de padrões com múltiplas classes, a função de ativação mais comumente utilizada na camada de saída é a função **softmax**. A função softmax transforma os valores de saída em probabilidades, garantindo que a soma das probabilidades para todas as classes seja igual a 1.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "1. **Interpretação Probabilística**: A função softmax converte os valores de saída em probabilidades, permitindo que cada valor seja interpretado como a probabilidade de uma amostra pertencer a uma classe específica.\n",
+    "2. **Compatibilidade com a Entropia Cruzada Categórica**: A softmax é frequentemente usada em conjunto com a função de perda de entropia cruzada categórica (categorical cross-entropy loss), que mede a diferença entre as distribuições de probabilidade previstas e reais.\n",
+    "3. **Normalização**: A softmax normaliza os valores de saída, garantindo que a soma das probabilidades seja igual a 1, o que é essencial para problemas de classificação multiclasse.\n",
+    "\n",
+    "##### Limitações:\n",
+    "- **Explosão de Gradiente**: Em alguns casos, os valores de entrada para a função softmax podem ser muito grandes, levando a problemas de estabilidade numérica. Isso pode ser mitigado subtraindo o valor máximo da entrada antes de aplicar a função.\n",
+    "- **Interdependência das Classes**: A softmax considera todas as classes ao calcular as probabilidades, o que pode ser uma limitação em problemas onde as classes são independentes.\n",
+    "\n",
+    "Apesar dessas limitações, a softmax é amplamente utilizada em problemas de classificação multiclasse devido à sua capacidade de produzir probabilidades interpretáveis e sua compatibilidade com funções de perda padrão.\n",
+    "\n",
+    "#### ($iii$) - Problema de regressão (aproximação de funções)\n",
+    "\n",
+    "Para problemas de regressão, a função de ativação mais comumente utilizada na camada de saída é a **função linear**. Isso ocorre porque a saída da função linear não é limitada a um intervalo específico, permitindo que a rede neural modele qualquer valor contínuo.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "1. **Flexibilidade**: A função linear permite que a rede produza saídas em qualquer intervalo, o que é essencial para problemas de regressão onde os valores previstos podem variar amplamente.\n",
+    "2. **Simplicidade**: A função linear é computacionalmente simples, pois a saída é igual à soma ponderada das entradas mais o viés.\n",
+    "3. **Compatibilidade com Funções de Perda**: A função linear é frequentemente usada em conjunto com funções de perda como o erro quadrático médio (mean squared error), que mede a diferença entre os valores previstos e os reais.\n",
+    "\n",
+    "##### Limitações:\n",
+    "- **Falta de Não-Linearidade**: A função linear não introduz não-linearidade, o que significa que a capacidade da rede de modelar relações complexas depende inteiramente das camadas ocultas.\n",
+    "- **Escalabilidade**: Em alguns casos, a saída da função linear pode crescer muito, o que pode levar a problemas de estabilidade numérica.\n",
+    "\n",
+    "Apesar dessas limitações, a função linear é amplamente utilizada em problemas de regressão devido à sua simplicidade e adequação para prever valores contínuos.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
