prettier letter on data

--- a/Exercises_List_1/Q4.ipynb
+++ b/Exercises_List_1/Q4.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "## a)\n",
-    "### a . $i$ ) Faça uma análise comparativa de cada uma destas funções apresentando de forma gráfica a variação da função e da sua derivada com relação a $v$ ( potencial de ativação)"
+    "### ($i$) - Faça uma análise comparativa de cada uma destas funções apresentando de forma gráfica a variação da função e da sua derivada com relação a $v$ ( potencial de ativação)"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "id": "cf9e617f",
    "metadata": {},
    "source": [
-    "### a . $ii$) Mostre que $\\phi'(v) = \\frac{d\\phi(v)}{dv} = a \\phi(v)[1 - \\phi(v)]$ para função sigmoíde.\n",
+    "### ($ii$) - Mostre que $\\phi'(v) = \\frac{d\\phi(v)}{dv} = a \\phi(v)[1 - \\phi(v)]$ para função sigmoíde.\n",
     "\n",
     "Para a função sigmoíde, temos:\n",
     "\n",
@@ -260,7 +260,7 @@
    "id": "3f944dcc",
    "metadata": {},
    "source": [
-    "### iii) Mostre que $ \\phi'(v) = \\frac{d\\phi(v)}{dv} = \\frac{a}{2}[1 - \\phi^2(v)] $ para função tangsigmoíde.\n",
+    "### ($iii$) - Mostre que $ \\phi'(v) = \\frac{d\\phi(v)}{dv} = \\frac{a}{2}[1 - \\phi^2(v)] $ para função tangsigmoíde.\n",
     "\n",
     "Já para a função tangente hiperbólica, temos que:\n",
     "\n",
