--- a/Exercises_List_1/Q4.ipynb
+++ b/Exercises_List_1/Q4.ipynb
@@ -372,6 +372,79 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70ff6edb",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### c) Para cada uma das condições do item (b) apresente a função custo a ser considerada no processo de treinamento de uma rede neural com múltiplas camadas em um processo de aprendizagem supervisionada.\n",
+    "\n",
+    "No treinamento de redes neurais em um processo de aprendizagem supervisionada, a escolha da função de custo é crucial, pois ela mede a diferença entre as previsões do modelo e os valores reais, orientando o ajuste dos pesos durante o treinamento. Abaixo estão as funções de custo recomendadas para cada uma das condições do item (b):\n",
+    "\n",
+    "#### ($i$) - Classificação de padrões com duas classes\n",
+    "Para problemas de classificação binária, a função de custo mais comumente utilizada é a **Entropia Cruzada Binária** (Binary Cross-Entropy Loss). \n",
+    "\n",
+    "A fórmula da entropia cruzada binária é:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L} = -\\frac{1}{N} \\sum_{i=1}^{N} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]\n",
+    "$$\n",
+    "\n",
+    "- **$y_i$**: Rótulo verdadeiro da classe (0 ou 1).\n",
+    "- **$\\hat{y}_i$**: Probabilidade prevista pelo modelo para a classe positiva.\n",
+    "- **$N$**: Número de amostras.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "- A entropia cruzada mede a diferença entre as distribuições de probabilidade previstas e reais, sendo ideal para problemas de classificação binária.\n",
+    "- Penaliza previsões incorretas de forma mais severa, incentivando o modelo a prever probabilidades próximas aos rótulos reais.\n",
+    "\n",
+    "#### ($ii$) - Classificação de padrões com múltiplas classes\n",
+    "Para problemas de classificação multiclasse, a função de custo mais utilizada é a **Entropia Cruzada Categórica** (Categorical Cross-Entropy Loss).\n",
+    "\n",
+    "A fórmula da entropia cruzada categórica é:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L} = -\\frac{1}{N} \\sum_{i=1}^{N} \\sum_{j=1}^{C} y_{ij} \\log(\\hat{y}_{ij})\n",
+    "$$\n",
+    "\n",
+    "- **$y_{ij}$**: Rótulo verdadeiro da classe $j$ para a amostra $i$ (1 para a classe correta, 0 para as demais).\n",
+    "- **$\\hat{y}_{ij}$**: Probabilidade prevista pelo modelo para a classe $j$ da amostra $i$.\n",
+    "- **$C$**: Número de classes.\n",
+    "- **$N$**: Número de amostras.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "- A entropia cruzada categórica é adequada para problemas multiclasse, pois considera todas as classes ao calcular a perda.\n",
+    "- Garante que o modelo aprenda a prever probabilidades corretas para cada classe.\n",
+    "\n",
+    "#### ($iii$) - Problema de regressão (aproximação de funções)\n",
+    "Para problemas de regressão, a função de custo mais comumente utilizada é o **Erro Quadrático Médio** (Mean Squared Error - MSE).\n",
+    "\n",
+    "A fórmula do erro quadrático médio é:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{L} = \\frac{1}{N} \\sum_{i=1}^{N} (y_i - \\hat{y}_i)^2\n",
+    "$$\n",
+    "\n",
+    "- **$y_i$**: Valor real da saída.\n",
+    "- **$\\hat{y}_i$**: Valor previsto pelo modelo.\n",
+    "- **$N$**: Número de amostras.\n",
+    "\n",
+    "##### Justificativa:\n",
+    "- O MSE mede a diferença média ao quadrado entre os valores reais e previstos, penalizando erros maiores de forma mais severa.\n",
+    "- É amplamente utilizado em problemas de regressão devido à sua simplicidade e eficácia.\n",
+    "\n",
+    "#### Resumo Comparativo\n",
+    "\n",
+    "| Condição                                | Função de Custo                  | Fórmula                                                                 |\n",
+    "|-----------------------------------------|----------------------------------|-------------------------------------------------------------------------|\n",
+    "| Classificação binária                   | Entropia Cruzada Binária         | $-\\frac{1}{N} \\sum_{i=1}^{N} \\left[ y_i \\log(\\hat{y}_i) + (1 - y_i) \\log(1 - \\hat{y}_i) \\right]$ |\n",
+    "| Classificação multiclasse               | Entropia Cruzada Categórica      | $-\\frac{1}{N} \\sum_{i=1}^{N} \\sum_{j=1}^{C} y_{ij} \\log(\\hat{y}_{ij})$ |\n",
+    "| Regressão (aproximação de funções)      | Erro Quadrático Médio (MSE)      | $\\frac{1}{N} \\sum_{i=1}^{N} (y_i - \\hat{y}_i)^2$                       |\n",
+    "\n",
+    "A escolha da função de custo deve ser feita com base no tipo de problema e na natureza dos dados, garantindo que o modelo aprenda de forma eficiente e eficaz.\n"
+   ]
   }
  ],
  "metadata": {
