--- a/Exercises_List_2/Q3.ipynb
+++ b/Exercises_List_2/Q3.ipynb
@@ -12,11 +12,21 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "**3) Considere quatro distribuições gaussianas, $C_1, C_2, C_3, C_4$, em um espaço de entrada de dimensionalidade igual a oito, isto é $\\mathbf{x} = (x_1, x_2, \\ldots, x_8)^t$.**"
+      ],
+      "metadata": {
+        "id": "YVND8XAz8UE1"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dY302cFtqvE3"
       },
       "source": [
-        "# Visualização 2D com Autoencoder\n",
+        "**Visualização 2D com Autoencoder**\n",
+        "\n",
         "Neste notebook, vamos:\n",
         "1. Gerar 4 distribuições gaussianas de 8 dimensões com médias distintas.\n",
         "2. Treinar uma rede **autoencoder** para reduzir essas 8 dimensões para 2.\n",
@@ -29,15 +39,19 @@
         "id": "Dxk4OSk6qvE7"
       },
       "source": [
-        "### a) Definição das Distribuições Gaussianas\n",
-        "O exercício começa com quatro distribuições gaussianas, cada uma com média diferente em um espaço de 8 dimensões. As médias dessas distribuições são:\n",
+        "### **a) Todas as nuvens de dados formadas têm variâncias unitárias, mas centros ou vetores média são diferentes e dados por**\n",
+        "$\\mathbf{m}_1 = (0,0,0,0,0,0,0,0)^t$,\n",
+        "$\\mathbf{m}_2 = (4,0,0,0,0,0,0,0)^t$,\n",
+        "$\\mathbf{m}_3 = (0,0,4,0,0,0,0,0)^t$,\n",
+        "$\\mathbf{m}_4 = (0,0,0,0,0,0,0,4)^t$.\n",
         "\n",
-        "1. **Média de $C_1$:** $\\mathbf{m}_1 = (0, 0, 0, 0, 0, 0, 0, 0)$\n",
-        "2. **Média de $C_2$:** $\\mathbf{m}_2 = (4, 0, 0, 0, 0, 0, 0, 0)$\n",
-        "3. **Média de $C_3$:** $\\mathbf{m}_3 = (0, 0, 4, 0, 0, 0, 0, 0)$\n",
-        "4. **Média de $C_4$:** $\\mathbf{m}_4 = (0, 0, 0, 0, 0, 0, 0, 4)$\n",
+        "**Resposta:**\n",
+        "Cada uma das distribuições gaussianas tem variância unitária e diferentes médias dadas por:\n",
         "\n",
-        "Cada distribuição tem variância unitária e suas amostras são geradas com base nessas médias."
+        "* $\\mathbf{m}_1 = (0, 0, 0, 0, 0, 0, 0, 0)^T$\n",
+        "* $\\mathbf{m}_2 = (4, 0, 0, 0, 0, 0, 0, 0)^T$\n",
+        "* $\\mathbf{m}_3 = (0, 0, 4, 0, 0, 0, 0, 0)^T$\n",
+        "* $\\mathbf{m}_4 = (0, 0, 0, 0, 0, 0, 0, 4)^T$"
       ]
     },
     {
@@ -46,12 +60,10 @@
         "id": "TATrhXDVqvE8"
       },
       "source": [
-        "### b) Utilizando o Autoencoder para Visualização\n",
-        "Para reduzir a dimensionalidade dos dados de 8 para 2 dimensões, utilizamos uma rede neural autoencoder. O autoencoder foi treinado para codificar os dados em um espaço de 2 dimensões e reconstrui-los a partir dessa codificação. O objetivo é preservar a estrutura e as relações dos dados enquanto os projetamos para uma dimensão mais baixa.\n",
+        "**b) Utilizar uma rede de autoencoder para visualizar os dados em duas dimensões.**\n",
         "\n",
-        "A arquitetura do autoencoder é composta por duas partes:\n",
-        "- **Encoder:** que reduz a dimensionalidade dos dados de 8 para 2.\n",
-        "- **Decoder:** que reconstrói os dados de volta para 8 dimensões.\n"
+        "**Resposta:**\n",
+        "Foi utilizada uma rede autoencoder para reduzir a dimensionalidade dos dados para duas dimensões (2d), ou seja, uma rede neural que aprenda a codificar os vetores de 8 dimensões em um espaço de 2 dimensões e consiga reconstruir os dados originais a partir disso."
       ]
     },
     {
@@ -60,8 +72,10 @@
         "id": "b5JWgYAWqvFC"
       },
       "source": [
-        "### c) Objetivo: Visualização em 2D\n",
-        "O objetivo principal é transformar dados originalmente em 8 dimensões em um novo espaço bidimensional, de forma que a visualização dos dados em 2D facilite a análise. A redução de dimensionalidade preserva a estrutura dos dados para que as classes possam ser separadas de forma clara.\n"
+        "**c) O objetivo é visualizar os dados de dimensão 8 em um espaço de dimensão 2.**\n",
+        "\n",
+        "**Resposta:**\n",
+        "O objetivo principal é visualizar os dados originalmente em 8 dimensões em um novo espaço bidimensional (2D), preservando suas estruturas e relações.\n"
       ]
     },
     {
@@ -70,9 +84,29 @@
         "id": "2Gnj_DWPqvFC"
       },
       "source": [
-        "### d) Apresentação dos Dados no Novo Espaço\n",
-        "Após o treinamento do autoencoder, projetamos os dados em 2 dimensões e os visualizamos utilizando um gráfico de dispersão. O gráfico resultante mostra as quatro classes de distribuições gaussianas, e as cores representam as diferentes classes $C_1$, $C_2$, $C_3$, $C_4$. As classes são visualmente separáveis, o que confirma que o autoencoder conseguiu reduzir com sucesso a dimensionalidade preservando as relações entre as distribuições."
+        "**d) Apresente os dados neste novo espaço.**\n",
+        "\n",
+        "**Resposta:**\n",
+        "Os dados foram apresentados no novo espaço bidimensional, mostrando as quatro classes de forma visualmente separável, onde cada ponto representa um vetor codificado e cores distintas indicam cada uma das classes $C_1, C_2, C_3, C_4$."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---"
+      ],
+      "metadata": {
+        "id": "VfGq4VNP80ku"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Código Python**"
+      ],
+      "metadata": {
+        "id": "oA3Vh0rW86Ic"
+      }
     },
     {
       "cell_type": "code",
@@ -103,10 +137,19 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# Reprodutibilidade\n",
+        "# **Fixar semente para reprodutibilidade**\n",
         "np.random.seed(42)\n",
         "torch.manual_seed(42)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**a) Criar as quatro distribuições gaussianas**\n"
+      ],
+      "metadata": {
+        "id": "KweUCQsj9DDN"
+      }
     },
     {
       "cell_type": "code",
@@ -116,7 +159,6 @@
       },
       "outputs": [],
       "source": [
-        "# Médias das distribuições gaussianas\n",
         "means = [\n",
         "    np.array([0, 0, 0, 0, 0, 0, 0, 0]),\n",
         "    np.array([4, 0, 0, 0, 0, 0, 0, 0]),\n",
@@ -136,8 +178,20 @@
         "\n",
         "X = np.vstack(X)\n",
         "y = np.concatenate(y)\n",
+        "\n",
+        "# Converter para tensores\n",
+        "\n",
         "X_tensor = torch.tensor(X, dtype=torch.float32)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**b) Definir Autoencoder**"
+      ],
+      "metadata": {
+        "id": "2eq5CXGS9NEj"
+      }
     },
     {
       "cell_type": "code",
@@ -180,6 +234,7 @@
       },
       "outputs": [],
       "source": [
+        "# Treinamento\n",
         "epochs = 200\n",
         "for epoch in range(epochs):\n",
         "    optimizer.zero_grad()\n",
@@ -193,6 +248,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**c) Obter representações em 2D**\n"
+      ],
+      "metadata": {
+        "id": "531vyEhB9X3t"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -203,6 +267,15 @@
         "with torch.no_grad():\n",
         "    encoded = model.encoder(X_tensor).numpy()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**d) Visualizar**\n"
+      ],
+      "metadata": {
+        "id": "9iDM5N_U9ZdT"
+      }
     },
     {
       "cell_type": "code",
