--- a/Exercises_List_2/Q3.ipynb
+++ b/Exercises_List_2/Q3.ipynb
@@ -39,7 +39,7 @@
         "id": "Dxk4OSk6qvE7"
       },
       "source": [
-        "### **a) Todas as nuvens de dados formadas têm variâncias unitárias, mas centros ou vetores média são diferentes e dados por**\n",
+        "**a) Todas as nuvens de dados formadas têm variâncias unitárias, mas centros ou vetores média são diferentes e dados por**\n",
         "$\\mathbf{m}_1 = (0,0,0,0,0,0,0,0)^t$,\n",
         "$\\mathbf{m}_2 = (4,0,0,0,0,0,0,0)^t$,\n",
         "$\\mathbf{m}_3 = (0,0,4,0,0,0,0,0)^t$,\n",
@@ -110,26 +110,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "5PBF-eW7qvFD",
-        "outputId": "d4bee868-5f44-4b85-8b11-b8f3ea080ca7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<torch._C.Generator at 0x7930ec9dcdb0>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -140,7 +120,12 @@
         "# **Fixar semente para reprodutibilidade**\n",
         "np.random.seed(42)\n",
         "torch.manual_seed(42)"
-      ]
+      ],
+      "metadata": {
+        "id": "9UcfvQnM99Bu"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
