--- a/Exercises_List_2/Q3.ipynb
+++ b/Exercises_List_2/Q3.ipynb
@@ -130,7 +130,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**a) Criar as quatro distribuições gaussianas**\n"
+        "**Criar as quatro distribuições gaussianas**\n"
       ],
       "metadata": {
         "id": "KweUCQsj9DDN"
@@ -172,7 +172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**b) Definir Autoencoder**"
+        "**Definir Autoencoder**"
       ],
       "metadata": {
         "id": "2eq5CXGS9NEj"
@@ -235,7 +235,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**c) Obter representações em 2D**\n"
+        "**Obter representações em 2D**\n"
       ],
       "metadata": {
         "id": "531vyEhB9X3t"
@@ -256,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**d) Visualizar**\n"
+        "**Visualizar**\n"
       ],
       "metadata": {
         "id": "9iDM5N_U9ZdT"
